feat: basic chart in place

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.13.1",
     "react-jss": "^10.3.0",
     "react-scripts": "3.4.1",
+    "recharts": "^1.8.5",
     "serve": "^11.3.2"
   },
   "scripts": {
